<resources>
    <string name="app_name">Transport App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="iAm">I am a</string>
    <string name="app_user">User</string>
    <string name="app_vendor">Vendor</string>
    <string name="user_registration">User Registration</string>
    <string name="user_registration_name">Name</string>
    <string name="user_registration_name_hint">-- name --</string>
    <string name="user_registration_contact_no">Contact No.</string>
    <string name="user_registration_contact_no_hint">9812345678</string>
    <string name="user_registration_alternate_contact_no">Alternate No.</string>
    <string name="user_registration_alternate_contact_no_hint">9812345679</string>
    <string name="user_registration_gender">Gender</string>
    <string name="user_registration_address">Address</string>
    <string name="user_registration_address_hint">-- residence --</string>
    <string name="user_registration_pincode">Pin Code</string>
    <string name="user_registration_pincode_hint">-- postal code --</string>
    <string name="user_registration_password">Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="user_name_empty_error_message">User name can not be empty</string>
    <string name="user_contact_no_invalid_message">User\'s contact number can not be empty and should be of length 10.</string>
    <string name="user_addres_empty_error_message">User\'s address is mandatory field.</string>
    <string name="user_pincode_empty_error_message">User\'s pincode is mandatory</string>
    <string name="fcm_message">New message has arrived</string>
    <array name="user_registration_gender_entries">
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>
