<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DashboardActivity">
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transportAppTextView" android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_margin="8dp"
            app:layout_constraintHorizontal_bias="0.493"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:text="@string/iAm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iAmTextView" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/transportAppTextView"
            app:layout_constraintEnd_toEndOf="@+id/transportAppTextView" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/transportAppTextView"/>
    <Button
            android:text="@string/app_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userButton"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/iAmTextView"
            android:layout_marginStart="60dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" app:layout_constraintEnd_toStartOf="@+id/vendorButton"
            app:layout_constraintHorizontal_bias="0.5" android:onClick="showUserScreen"/>
    <Button
            android:text="@string/app_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vendorButton"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/iAmTextView" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="60dp"
            app:layout_constraintStart_toEndOf="@+id/userButton" app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>